# PIDS

./: .gitignore  README.md
technologies/infiltration-runoff-model/forward-model/: README.md  pyproject.toml
technologies/infiltration-runoff-model/forward-model/pids_forward/: __init__.py
technologies/infiltration-runoff-model/forward-model/scratch/: _adv_b_era_split.py  _adv_f_attack_open120.npz  _b3_mild_undershoot_adjudication.py  _b4_cotan_probe.py  _b4_obtuse_probe.py  _b4_positivity_probe.py  _b5_outlet_1d_probe.py  _b5_outlet_probe.py  _b5b_valley_concentration.py  _b_drain_embedded_numbers.py  _b_drain_endbias.py  _b_drain_refbe.py  _p2_b2_diag.py  _p3_convergent_fixture.py  _p3_convergent_storm_matrix.py  _p3_graph_probe.py  _p3_swale_accuracy.py  _reason4_census.py  _tiltedv_diag.py  _tiltedv_spike.py  _upwind_selector_probe.py  _v2d_limiter_control.py  _v2d_overland_diag.py  _v2d_upwind_V.py  cfl_substep_confirm.py  dt_refine_split.py  feasibility_2ha_layered.py  m3_3d_outlet_spike.py  m3_3d_perf_probe.py  m3_3d_perf_probe2.py  m3_3d_ridge_adversarial.py  m3_3d_uniformity_probe.py  m3_quad_cap_audit.py  m4_embedding_spike.py  m4_embedding_spike2.py  m4_extended_range_refs.npz  m4_extended_range_refs.py  m4_hillslope_drain.py  m4_hillslope_drain_clay.py  m4_hillslope_drain_dual.py  (+76 more)
technologies/infiltration-runoff-model/forward-model/tests/: conftest.py  test_convergent_dualdrain.py  test_coupled_gate_refs.py  test_coupling_1d.py  test_coupling_2d.py  test_coupling_3d.py  test_coupling_3d_tier2.py  test_coupling_embedded_exchange.py  test_coupling_upwind.py  (+23 more)
(+201 files in other folders)
